# context-diet

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/design_docs/: ARCHITECTURE.md  RESEARCH.md  ROADMAP.md  v0.1_implementation_plan.md  v0.1_task.md  v0.1_walkthrough.md
src/context_diet/: __init__.py  distiller.py  interfaces.py  registry.py  sniffer.py  token_utils.py
src/context_diet.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/context_diet/strategies/: __init__.py  json_diet.py  log_diet.py  plain_text.py  python_ast.py  sql_diet.py  yaml_diet.py
tests/: __init__.py  test_corpus_of_doom.py  test_distiller.py  test_json_diet.py  test_json_diet_extended.py  test_log_diet.py  test_log_diet_extended.py  test_python_ast.py  test_python_ast_extended.py  test_sniffer.py  test_sniffer_extended.py  test_sql_diet.py  test_sql_diet_extended.py  test_yaml_diet.py  test_yaml_diet_extended.py
tests/corpus_of_doom/: nested.json  unindented.py
